# pluginart

./: .gitignore  .golangci.yml  CLAUDE.md  LICENSE  README.md  go.mod  go.sum  pluginart.schema.fbs
.github/workflows/: ci.yml  release.yml
bench/: README.md
bench/go/: bench_test.go
bench/python/: plugin_server.py  run_bench.py
bench/typescript/: package-lock.json  package.json
cmd/pluginart/: main.go
docs/: cli.md  config.md  getting-started.md  protocol.md  python-host.md  releasing.md  schema.md  typescript-host.md
examples/host-go/: go.mod  go.sum  main.go  pluginart.toml  repeat_benchmark_test.go
examples/host-py/: main.py  pluginart.toml
examples/host-ts/: echo_client.ts  main.ts  package-lock.json  package.json  plugin_runner.ts  pluginart.toml  pluginart_helpers.ts  pluginart_wire.ts  tsconfig.json
examples/plugin-go/: go.mod  main.go
examples/plugin-py/: Dockerfile  handler.py  plugin.py  pluginart_helpers.py  pluginart_wire.py  requirements.txt
examples/plugin-repeat-go/: Dockerfile  go.mod  main.go  plugin.go
examples/plugin-repeat-py/: Dockerfile  handler.py  requirements.txt
examples/plugin-repeat-ts/: Dockerfile  handler.ts  package-lock.json  package.json  tsconfig.json
examples/plugin-ts/: Dockerfile  handler.ts  package-lock.json  package.json  plugin.ts
examples/schema/: echo.fbs  repeat.fbs
pkg/protocol/: client.go  conn.go  handshake.go  (+4 more)
runtimes/python/: README.md  pyproject.toml
runtimes/python/pluginart/: __init__.py  errors.py  manager.py  protocol.py  server.py
runtimes/python/tests/: test_protocol.py
(+111 files in other folders)
