[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "pluginart"
version = "0.2.2"
description = "Python runtime for pluginart hosts and plugins"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "pluginart contributors" }]
dependencies = ["flatbuffers>=24.3.25"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["pluginart"]

[tool.hatch.build.targets.sdist]
ignore-vcs = true
only-include = [
  "/pluginart",
  "/tests",
  "/README.md",
  "/pyproject.toml",
]
